src/objects/CM_Daily_Stats__c.object
<CustomObject>
    <fields>
        <fullName>Acc_Built_in_48_Hrs__c</fullName>
        <label>Acc Built in 48 Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Active_Clients__c</fullName>
        <label>Active Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advance_Notes__c</fullName>
        <description>Advance Notes</description>
        <inlineHelpText>Advance Notes with format</inlineHelpText>
        <label>Advance Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Adwords_Acc_Activities__c</fullName>
        <label>Adwords Acc Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Response_Cap__c</fullName>
        <formula>if(  Call_Response_Time__c &gt;=4 , 0 , 
if( Call_Response_Time__c &gt;= 2 , 0.5,
if( Call_Response_Time__c &gt;= 1 , 1 ,
   1.2
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Response Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Response_Time__c</fullName>
        <inlineHelpText>Average missed call response time from last 3 days</inlineHelpText>
        <label>Call Response Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Client_Cap__c</fullName>
        <formula>if( No_Contact_Clients__c /  Active_Clients__c &gt;=0.2 , 0 , 
if(No_Contact_Clients__c /  Active_Clients__c&gt;= 0.1 , 0.5 , 
 1
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Client Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credits_Issued__c</fullName>
        <label>Credits Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Index__c</fullName>
        <formula>Email_Sent_Cap__c * 0.1 + 
Outbound_Talk_Cap__c *0.15 +
(NPS__c / 10) *0.1 +
Email_Response_Cap__c *0.125 +
Call_Response_Cap__c *0.15 +
Contact_Client_Cap__c *0.1 +
No_Adwords_Cap__c * 0.15 +
Missed_Call_Cap__c *0.125</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Service Index</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email_Received__c</fullName>
        <label>Email Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Response_Cap__c</fullName>
        <formula>if( Email_Response_Time__c &gt;=4 , 0 , 
if(Email_Response_Time__c &gt;= 2 , 0.5 ,
if(Email_Response_Time__c &gt;= 1 , 1 ,
   1.2
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Response Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Response_Time__c</fullName>
        <inlineHelpText>Average email response time from last 7 days</inlineHelpText>
        <label>Email Response Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Sent_Cap__c</fullName>
        <description>value after apply cap for email sent</description>
        <formula>if(Email_Sent__c/Active_Clients__c &lt; 1.5 ,1*Email_Sent__c/Active_Clients__c , 1.5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>value after apply cap for email sent</inlineHelpText>
        <label>Email Sent Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <inlineHelpText>Email Sent from last 7 days</inlineHelpText>
        <label>Email Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalated_Cases__c</fullName>
        <label>Escalated Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up_in_9_Days__c</fullName>
        <label>Follow Up in 9 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inbound_Talk_Minutes__c</fullName>
        <label>Inbound Talk Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Missed_Call_Cap__c</fullName>
        <formula>if ( No_of_Missed_Calls__c = 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missed Call Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <inlineHelpText>NPS score from last 30 days</inlineHelpText>
        <label>NPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Adwords_Cap__c</fullName>
        <formula>if(  No_Change_Accounts__c / Active_Clients__c &gt;=0.2 , 0 , 
if(No_Change_Accounts__c / Active_Clients__c&gt;= 0.1 , 0.5, 1

) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Adwords Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Change_Accounts__c</fullName>
        <inlineHelpText>No adwords change from last 21 days</inlineHelpText>
        <label>No Change Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Contact_Clients__c</fullName>
        <inlineHelpText>Clients who didn&apos;t meet the minimum contacts requirement</inlineHelpText>
        <label>No Contact Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Missed_Calls__c</fullName>
        <inlineHelpText>Missed calls from last 3 days</inlineHelpText>
        <label>Missed Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outbound_Talk_Cap__c</fullName>
        <formula>if((Total_Talk_Minutes__c/Active_Clients__c)/4 &lt; 1.5,(Total_Talk_Minutes__c/Active_Clients__c)/4, 1.5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Talk Minutes Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outbound_Talk_Minutes__c</fullName>
        <inlineHelpText>Outbound talk time from last 7 days</inlineHelpText>
        <label>Outbound Talk Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Index__c</fullName>
        <formula>Customer_Service_Index__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Index</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Index_In_String__c</fullName>
        <formula>TEXT(ROUND(Customer_Service_Index__c * 100,2) ) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Index In String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setup_within_24_Hrs__c</fullName>
        <label>Setup within 24 Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Emails__c</fullName>
        <formula>Email_Sent__c + Email_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Talk_Minutes__c</fullName>
        <formula>Inbound_Talk_Minutes__c + Outbound_Talk_Minutes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Talk Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workload_Index__c</fullName>
        <formula>(Active_Clients__c / 120)*0.4 + (Total_Talk_Minutes__c / 500) * 0.3 + (Total_Emails__c/300) * 0.3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workload Index</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <description>The field value is true when it will be show up in Spinify</description>
        <formula>If( DATEVALUE(CreatedDate )= TODAY()+(-1), true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The field value is true when it will be show up in Spinify</inlineHelpText>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isGMT__c</fullName>
        <formula>if(CONTAINS(Role__c , &apos;gmt&apos;) ||CONTAINS(Role__c , &apos;GMT&apos;)  , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isGMT</label>
        <type>Checkbox</type>
    </fields>
    <label>Workload Index(Project Einstein)</label>
    <listViews>
        <fullName>Customer_Service_Index_GMT</fullName>
        <columns>NAME</columns>
        <columns>Role__c</columns>
        <columns>isGMT__c</columns>
        <columns>isActive__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Customer_Service_Index__c</columns>
        <columns>Active_Clients__c</columns>
        <columns>Email_Sent__c</columns>
        <columns>Outbound_Talk_Minutes__c</columns>
        <columns>Email_Response_Time__c</columns>
        <columns>Call_Response_Time__c</columns>
        <columns>No_Contact_Clients__c</columns>
        <columns>No_Change_Accounts__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Total_Emails__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>isGMT__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Customer Service Index - GMT</label>
        <sharedTo>
            <role>Client_Manager_Team_A_Leader</role>
            <role>Client_Manager_Team_B_Leader</role>
            <role>Client_Manager_Team_C_Leader</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Service_Index_SLX</fullName>
        <columns>NAME</columns>
        <columns>Role__c</columns>
        <columns>isActive__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Customer_Service_Index__c</columns>
        <columns>Active_Clients__c</columns>
        <columns>Email_Sent__c</columns>
        <columns>Total_Talk_Minutes__c</columns>
        <columns>Email_Response_Time__c</columns>
        <columns>Call_Response_Time__c</columns>
        <columns>No_Contact_Clients__c</columns>
        <columns>No_Change_Accounts__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NPS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>notContain</operation>
            <value>gmt</value>
        </filters>
        <filters>
            <field>isActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Customer Service Index - SLX</label>
        <sharedTo>
            <role>Client_Manager_Team_A_Leader</role>
            <role>Client_Manager_Team_B_Leader</role>
            <role>Client_Manager_Team_C_Leader</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Workload_Index_GMT</fullName>
        <columns>NAME</columns>
        <columns>Workload_Index__c</columns>
        <columns>Active_Clients__c</columns>
        <columns>Email_Received__c</columns>
        <columns>Email_Sent__c</columns>
        <columns>Total_Emails__c</columns>
        <columns>Inbound_Talk_Minutes__c</columns>
        <columns>Outbound_Talk_Minutes__c</columns>
        <columns>Total_Talk_Minutes__c</columns>
        <columns>NPS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Total_Emails__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>contains</operation>
            <value>gmt</value>
        </filters>
        <label>Workload Index - GMT</label>
        <sharedTo>
            <role>Client_Manager_GMT_Team_A_Leader</role>
            <role>Client_Manager_GMT_Team_B_Leader</role>
            <role>SLXAusClientOperationsManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Workload_Index_SLX</fullName>
        <columns>NAME</columns>
        <columns>isActive__c</columns>
        <columns>Workload_Index__c</columns>
        <columns>Active_Clients__c</columns>
        <columns>Email_Received__c</columns>
        <columns>Email_Sent__c</columns>
        <columns>Total_Emails__c</columns>
        <columns>Inbound_Talk_Minutes__c</columns>
        <columns>Outbound_Talk_Minutes__c</columns>
        <columns>Total_Talk_Minutes__c</columns>
        <columns>NPS__c</columns>
        <columns>Email_Response_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Customer_Service_Index__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Total_Emails__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>notContain</operation>
            <value>gmt</value>
        </filters>
        <label>Workload Index - SLX</label>
        <sharedTo>
            <role>Client_Manager_Team_A_Leader</role>
            <role>Client_Manager_Team_B_Leader</role>
            <role>Client_Manager_Team_C_Leader</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>CM Daily Stats Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workload Index(Project Einstein)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>